
Random chat feature support. Now it's possible to search for a random
chat partner in a specific group with the "Find/add dialog" as well as
to announce your own availability with the "Update user info" item under
the "irc" tab in the account manager dialog.

Finally, a long-awaited feature got implemented. Server-based contact
lists are now supported by centericq. By default, all the add and remove
operations on your contact list are reflected server-side. Also, as soon
as you login the contacts stored on the ICQ server get auto-added to
your local list. Though it's possible to disable this, by setting the
value of the "Store contact list server-side" in the "Update user info"
dialog for ICQ to "no". To synchronize your local contact list with the
remote one, i.e. to add the server-side missing items, use the
"Syncronize contact list" item in the account manager dialog.

Also, having a look at the newly implemented features of libicq2000, I
found something missed in centericq. So, since this version centericq is
able to perform keywords-based search, receive webpager events and
control the visibility of your current ICQ status on the web.

There were user interface related changes as well. Visible and invisible
contacts are highlighted in a special way on the contact list now. Read
the README file for more details.

When compiled with fribidi, it's now possible to disable displaying of
right-to-left text by switching off the appropriate item in the
configuration dialog.

The event sending general-purpose routine was improved so that remote
DoS/flood protection on the remove IM servers doesn't turn on because of
hudge mass-sendings. Now messages that overflow the limit get postponed
and sent in another 5 seconds.

The configuration changes, as well as users' details, group settings and
some other stuff is now saved immediately once it gets modified, and not
only on exit, like it was before. Thanks to Wolfram
Schlich <wolfram@schlich.org> for pointing this out.