@@ -10,10 +10,6 @@
 *
 */
 
-yahoo user is added -> then immediately remove doesn't work
-
-yahoo start typing can be displayed 100 times
-
 MSN: 3rd person invitation from other party -> centericq segfault
 
 MSN:
@@ -49,4 +45,4 @@ try to implement the daemon mode
 
 todo and reminders
 
-$Id: TODO,v 1.259 2002/08/18 17:15:37 konst Exp $
+$Id: TODO,v 1.260 2002/08/19 08:25:16 konst Exp $
